up profile - up view data

--- a/src/renderer/components/EmployeeData.html
+++ b/src/renderer/components/EmployeeData.html
@@ -14,6 +14,7 @@
             <div class="filter-container">
                 <input type="text" id="filter-stt" placeholder="Lọc theo STT">
                 <input type="text" id="filter-name" placeholder="Lọc theo Tên">
+                <input type="text" id="filter-employee-id" placeholder="Lọc theo Mã nhân viên">
                 <!-- <input type="text" id="filter-dob" placeholder="Lọc theo Ngày sinh">
                 <input type="text" id="filter-address" placeholder="Lọc theo Địa chỉ"> -->
                 <input type="text" id="filter-phone" placeholder="Lọc theo Số điện thoại">
@@ -120,6 +121,7 @@
             <li id="context-menu-copy">Sao chép</li>
             <li id="context-menu-edit">Chỉnh sửa</li>
             <li id="context-menu-delete">Xóa</li>
+            <li id="context-menu-view-profile">Xem profile</li>
         </ul>
     </div>
 
